// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column can be flex 1`] = `
<div
  className="css-1mo6rv1"
>
  <div
    className="css-1dh5pml"
  >
    <div
      className="css-o11t8y"
    >
      <div
        className="css-10185dy"
        justify="flex-start"
      >
        <div
          className="css-kn5xgs"
          flex={true}
          s="var(--grid-colcount)"
          suppressHydrationWarning={true}
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Column can be hidden 1`] = `
<div
  className="css-1mo6rv1"
>
  <div
    className="css-1dh5pml"
  >
    <div
      className="css-o11t8y"
    >
      <div
        className="css-10185dy"
        justify="flex-start"
      >
        <div
          className="css-tlwpc7"
          s={0}
          suppressHydrationWarning={true}
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Column can be raw 1`] = `
<div
  className="css-1mo6rv1"
>
  <div
    className="css-1dh5pml"
  >
    <div
      className="css-o11t8y"
    >
      <div
        className="css-10185dy"
        justify="flex-start"
      >
        <div
          className="css-ff4wkt"
          raw={true}
          s="var(--grid-colcount)"
          suppressHydrationWarning={true}
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Column can have colspan 1`] = `
<div
  className="css-1mo6rv1"
>
  <div
    className="css-1dh5pml"
  >
    <div
      className="css-o11t8y"
    >
      <div
        className="css-10185dy"
        justify="flex-start"
      >
        <div
          className="css-1bh48o"
          l={3}
          m={2}
          s={1}
          suppressHydrationWarning={true}
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Column have order 1`] = `
<div
  className="css-1mo6rv1"
>
  <div
    className="css-1dh5pml"
  >
    <div
      className="css-o11t8y"
    >
      <div
        className="css-10185dy"
        justify="flex-start"
      >
        <div
          className="css-11ffjwm"
          order={-1}
          s="var(--grid-colcount)"
          suppressHydrationWarning={true}
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;
